// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button/IconButton IconButton Playground 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-5 path {
  fill: #ffffff;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button/IconButton IconButton Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-5 path {
  fill: #ffffff;
}

.emotion-7 {
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-7:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-7:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-7:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-7:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-9 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #1451dc;
}

.emotion-11 {
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-11:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: rgba(23,91,245,0.07);
}

.emotion-11:active:not(:disabled) {
  background-color: rgba(23,91,245,0.14);
}

.emotion-16 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-16:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-16:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-16:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-16:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-20 {
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-20:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-20:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-20:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-20:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-24 {
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-24:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-24:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-24:hover:not(:disabled) {
  background-color: rgba(23,91,245,0.07);
}

.emotion-24:active:not(:disabled) {
  background-color: rgba(23,91,245,0.14);
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-7"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-11"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-16"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-20"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-24"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Playground 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-5 path {
  fill: #ffffff;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-5 path {
  fill: #ffffff;
}

.emotion-7 {
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-7:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-7:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-7:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-7:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-9 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #1451dc;
}

.emotion-11 {
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-11:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: rgba(23,91,245,0.07);
}

.emotion-11:active:not(:disabled) {
  background-color: rgba(23,91,245,0.14);
}

.emotion-16 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-16:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-16:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-16:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-16:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-20 {
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-20:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-20:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-20:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-20:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-24 {
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-24:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-24:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-24:hover:not(:disabled) {
  background-color: rgba(23,91,245,0.07);
}

.emotion-24:active:not(:disabled) {
  background-color: rgba(23,91,245,0.14);
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-7"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-11"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-16"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-20"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-24"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-9"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
